--- a/css/component.css
+++ b/css/component.css
@@ -97,9 +97,9 @@ body {
 	white-space: nowrap;
 }
 
-.intro-content h1 > span:first-child {
+..intro-content h1 > span:first-child {
 	font-weight: 300;
-	font-size: 2em;
+	font-size: 3em;
 }
 
 .intro-content h1 > span:nth-child(2) {
@@ -415,7 +415,7 @@ body {
 }
 
 @media screen and (max-width: 42.5em) {
-	body { font-size: 80%; }
+	body { font-size: 23px; }
 	.intro-content { font-size: 50%; }
 }
 
