--- a/css/demo.css
+++ b/css/demo.css
@@ -1,25 +1,14 @@
-/* General Blueprint Style */
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
-@font-face {
-	font-family: 'bpicons';
-	src:url('../fonts/bpicons/bpicons.eot');
-	src:url('../fonts/bpicons/bpicons.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/bpicons/bpicons.woff') format('woff'),
-		url('../fonts/bpicons/bpicons.ttf') format('truetype'),
-		url('../fonts/bpicons/bpicons.svg#bpicons') format('svg');
-	font-weight: normal;
-	font-style: normal;
-} /* Made with http://icomoon.io/ */
+
 
 *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 body, html { font-size: 100%; padding: 0; margin: 0;}
 
-/* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
+
 .clearfix:before, .clearfix:after { content: " "; display: table; }
 .clearfix:after { clear: both; }
 
 body {
-    font-family: 'Lato', Calibri, Arial, sans-serif;
+	font-family: 'Poppins', sans-serif;
     color: #fff;
     background: #333;
 }
@@ -49,7 +38,9 @@ a:hover {
 	line-height: 1.3;
 	margin: 0 0 0.6em 0;
 	float: left;
+	margin-left: -90px;
 	font-weight: 400;
+	color: white;
 }
 
 .codropsheader > span {
@@ -190,7 +181,7 @@ a:hover {
 
 @media screen and (max-width: 73.375em) {
 	.codropsheader {
-		text-align: center;
+		margin-left:-85px;
 	}
 	.codropsheader h1,
 	.codropsheader nav,
