--- a/css/component.css
+++ b/css/component.css
@@ -78,19 +78,34 @@ body {
 	transform: translateY(-50%) translateX(-50%);
 }
 
-.profile {
-	margin: 0 auto;
-	width: 140px;
-	height: 140px;
-	border-radius: 50%;
-	/* background: #47a3da; */
+
+@media screen and (max-width: 992px) {
+	.profile img {
+		/* max-width: 100%; */
+		border-radius: 50%;
+		opacity: 1;
+		margin: 0 auto;
+		width: 200px;
+		height: 200px;
+		border-radius: 50%;
+		/* background: #47a3da; */
+	}
+	
 }
 
-.profile img {
-	/* max-width: 100%; */
-	border-radius: 50%;
-	opacity: 1;
+@media screen and (min-width: 995px){
+	.profile img {
+		/* max-width: 100%; */
+		border-radius: 50%;
+		opacity: 1;
+		margin: 0 auto;
+		width: 140px;
+		height: 140px;
+		border-radius: 50%;
+		/* background: #47a3da; */
+	}
 }
+
 
 .intro-content h1 > span {
 	display: block;
