--- a/css/demo.css
+++ b/css/demo.css
@@ -37,8 +37,8 @@ a:hover {
 	font-size: 2.125em;
 	line-height: 1.3;
 	margin: 0 0 0.6em 0;
-	float: left;
-	margin-left: -90px;
+	float: right;
+	
 	font-weight: 400;
 	color: white;
 }
@@ -181,7 +181,7 @@ a:hover {
 
 @media screen and (max-width: 73.375em) {
 	.codropsheader {
-		margin-left:-95px;
+	
 	}
 	.codropsheader h1,
 	.codropsheader nav,
