--- a/css/component.css
+++ b/css/component.css
@@ -104,6 +104,16 @@ body {
 		border-radius: 70px;
 		font-size: 20px;
 	}
+	.codropsheader h1 {
+		font-size: 2.125em;
+		line-height: 1.3;
+		margin: 0 0 0.6em 0;
+		float: right;
+		
+		font-weight: 400;
+		color: white;
+	}
+
 }
 
 @media screen and (min-width: 995px){
