--- a/test.css
+++ b/test.css
@@ -12,12 +12,14 @@ section{
     height: 100vh;
     width: 50%;
     text-align: center;
+    color: white;
 }
 .right{
     background-color: #fff;
     height: 100vh;
     width: 50%;
     text-align: center;
+    color: #FFB100;
 }
 .left-box {
     top: 25%;
@@ -53,6 +55,10 @@ button{
     box-shadow: 10px 10px 15px rgb(73 78 92 / 10%);
     background-color: white;
 }
+button:hover{
+background-color: #333;
+color: white;
+}
 .photo{
     border-radius: 50%;
 }
@@ -64,33 +70,112 @@ button{
     float: right;
     margin: 20px;
 }
+#btn{
+    background-color: #FFB100;
+    color: white;
+}
+#btn:hover{
+    background-color: #333;
+color: white;
+}
+@media only screen and (max-width: 1025px) {
+ 
+ h1{
+     font-size: 20px;
+ }
+ .h2{
+     font-size: 13px;
+ }
+ 
+
+   }
 @media only screen and (max-width: 450px) {
    .left , .right{
-       width: 100%;
-       height: 50vh;
+       width: 50%;
+       height: 100vh;
       
    }
    .left-box{
-    top: 2%;
-    left: 27%;
+    top: 25%;
+    left: 7%;
     position: absolute;
 
 }
 .right-box{
-    top: 53%;
-    left: 23%;
+    top: 25%;
+    right: 7%;
    
 }
 .photo{
-    display: none;
+   width: 80%;
 }
-.logo2{
-    display: none;
+.logo2 img{
+    width: 80%;
 }
 h1{
-    font-size: 30px;
+    font-size: 20px;
 }
 .h2{
+    font-size: 15px;
+}
+button{
+
+    border: none;
+    padding: 10px 20px;
+    margin-top: 20px;
     font-size: 25px;
+    text-decoration: none;
+    
+    border-radius: 10px 30px;
+    padding: 20px 30px;
+    font-size: 16px;
+    color: #333;
+    box-shadow: 10px 10px 15px rgb(73 78 92 / 10%);
+    background-color: white;
 }
   }
+  @media only screen and (max-width: 320px) {
+    .left , .right{
+        width: 50%;
+        height: 100vh;
+       
+    }
+    .left-box{
+     top: 25%;
+     left: 2%;
+     position: absolute;
+ 
+ }
+ .right-box{
+     top: 25%;
+     right: 2%;
+    
+ }
+ .photo{
+    width: 70%;
+ }
+ .logo2 img{
+     width: 80%;
+ }
+ h1{
+     font-size: 20px;
+ }
+ .h2{
+     font-size: 15px;
+ }
+ button{
+ 
+     border: none;
+     padding: 10px 20px;
+     margin-top: 20px;
+     font-size: 25px;
+     text-decoration: none;
+     
+     border-radius: 10px 30px;
+     padding: 20px 30px;
+     font-size: 16px;
+     color: #333;
+     box-shadow: 10px 10px 15px rgb(73 78 92 / 10%);
+     background-color: white;
+ }
+   }
